<resources>

    <string name="app_name">To do List</string>

    <!-- Labels -->
    <string name="label_tasks">Tarefas</string>
    <string name="label_new_task">Nova Tarefa</string>
    <string name="label_save_task">Salvar Tarefa</string>
    <string name="label_edit_task">Editar Tarefa</string>
    <string name="label_title">Título</string>
    <string name="label_description">Descrição</string>
    <string name="label_date">Data</string>
    <string name="label_hour">Hora</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Excluir</string>
    <string name="label_yes">Sim</string>
    <string name="label_no">Não</string>
    <string name="label_ok">OK</string>
    <string name="label_remove_filter">Remover filtro</string>

    <!-- Messages -->
    <string name="dialog_discard_title">Descartar alterações?</string>
    <string name="dialog_discard_message">Deseja voltar e descartar as alterações realizadas?</string>
    <string name="dialog_delete_message">Deseja excluir esta tarefa?</string>
    <string name="snackbar_blank_message">A tarefa precisa ter um título ou uma descrição.</string>
    <string name="toast_saved_task_message">Tarefa salva!</string>

    <!-- Descriptions -->
    <string name="description_btn_menu">menu button</string>
    <string name="label_filter">Filtrar</string>

    <!-- Colors -->
    <string name="color_transparent">Sem cor</string>
    <string name="color_yellow">Amarelo</string>
    <string name="color_green">Verde</string>
    <string name="color_blue">Azul</string>
    <string name="color_red">Vermelho</string>

</resources>
